@@ -12,7 +12,7 @@ configs:
 install-stem: vmlinuz
 
 [relations]
-headers%gcc-4.8: linux-compiler-gcc-4.8-s390
+headers%gcc-4.9: linux-compiler-gcc-4.9-s390
 
 [s390x_build]
 debug-info: true
