@@ -6,12 +6,12 @@ Description: Compiler for Linux on ARM (meta-package)
  This package depends on gcc 4.9 of the appropriate architecture for
  Linux on armel and armhf.
 
-Package: linux-compiler-gcc-4.8-s390
-Depends: gcc-4.8, ${misc:Depends}
+Package: linux-compiler-gcc-4.9-s390
+Depends: gcc-4.9, ${misc:Depends}
 Architecture: s390 s390x
 Multi-Arch: foreign
 Description: Compiler for Linux on IBM zSeries (meta-package)
- This package depends on gcc 4.8 of the appropriate architecture for
+ This package depends on gcc 4.9 of the appropriate architecture for
  Linux on s390 and s390x.
 
 Package: linux-compiler-gcc-4.9-x86
