@@ -20,6 +20,7 @@ linux (4.2.6-2) UNRELEASED; urgency=medium
   * netfilter: Enable NFT_DUP_IPV4, NFT_DUP_IPV6 as modules (Closes: #803370)
   * [x86] Enable PINCTRL_BAYTRAIL (Closes: #797949)
   * qxl: Enable by default (Closes: #779515)
+  * [s390*] Update linux-compiler metapackage to gcc-4.9
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 10 Nov 2015 22:05:58 +0100
 
